:bug: Fixes center alignment

--- a/src/style.scss
+++ b/src/style.scss
@@ -12,7 +12,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: fit-content;
+  width: 100vw;
   min-height: 100vh;
   color: $color-200;
   font-family: $font-primary, $font-secondary;
